# NeonFrameWM

./: CMakeLists.txt  NeonFrameConfig.toml  NeonFrameWM.desktop  README.md
NeonFrame/NF_Image/: CMakeLists.txt
NeonFrame/NF_Image/src/: CMakeLists.txt  NF_Image.cpp  NF_Image.hpp
NeonFrame/NeonFrameWM/: CMakeLists.txt
NeonFrame/NeonFrameWM/src/: CMakeLists.txt  EventManager.cpp  EventManager.hpp  ShortcutHandler.cpp  ShortcutManager.cpp  WindowManagers.cpp  WindowManagers.hpp  main.cpp
NeonFrame/NeonFrameWM/src/Client/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  DesktopManager.cpp  DesktopManager.hpp
NeonFrame/NeonFrameWM/src/Config/: KeyboardShortcut.hpp
NeonFrame/NeonFrameWM/src/Constants/: cursorlist.hpp  keysym.hpp
NeonFrame/NeonFrameWM/src/Utils/: ColorManager.cpp  Cursor.cpp  Cursor.hpp  Log.hpp
cmake/: post_install.cmake
src/: CMakeLists.txt  main.cpp
src/NeonFrameWM/: EventManager.cpp  EventManager.hpp  ShortcutHandler.cpp  ShortcutHandler.hpp  ShortcutManager.cpp  ShortcutManager.hpp  WindowManagers.cpp  WindowManagers.hpp
src/NeonFrameWM/Client/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp
src/NeonFrameWM/Config/: KeyboardShortcut.hpp
src/NeonFrameWM/Constants/: mask.hpp
src/NeonFrameWM/Utils/: ColorManager.hpp  Cursor.cpp  Cursor.hpp
